--- a/css/style.css
+++ b/css/style.css
@@ -194,18 +194,18 @@ html {
     color: #fff; }
 
 .primary-primary-outline--hover {
-  background: #3b4eda;
+  background: #830f00f6;
   color: #fff; }
   .primary-primary-outline--hover:hover {
-    border-color: #3b4eda;
+    border-color: #830f00f6;
     background: transparent; }
 
 .primary-outline-primary--hover {
   background: transparent;
-  border-color: #3b4eda; }
+  border-color: #830f00f6; }
   .primary-outline-primary--hover:hover {
     color: #fff;
-    background: #3b4eda; }
+    background: #830f00f6; }
 
 body {
   line-height: 1.7;
@@ -279,7 +279,7 @@ h1, h2, h3, h4, h5,
   background: #fff !important;
   font-family: "Poppins", sans-serif; }
   .form-control:active, .form-control:focus {
-    border-color: #3b4eda; }
+    border-color: #830f00f6; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
@@ -418,7 +418,7 @@ h1, h2, h3, h4, h5,
   .ul-check.success li:before {
     color: #71bc42; }
   .ul-check.primary li:before {
-    color: #3b4eda; }
+    color: #830f00f6; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
@@ -474,7 +474,7 @@ h1, h2, h3, h4, h5,
     padding: 0;
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active {
-      color: #3b4eda !important; }
+      color: #830f00f6 !important; }
     .site-navbar .site-navigation .site-menu a {
       text-decoration: none !important;
       display: inline-block; }
@@ -512,7 +512,7 @@ h1, h2, h3, h4, h5,
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #3b4eda;
+        border-top: 2px solid #830f00f6;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         padding: 0px 0;
@@ -547,7 +547,7 @@ h1, h2, h3, h4, h5,
           transition: 0s all;
           color: #000 !important; }
           .site-navbar .site-navigation .site-menu .has-children .dropdown a.active {
-            color: #3b4eda !important;
+            color: #830f00f6 !important;
             background: #f8f9fa; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
@@ -570,7 +570,7 @@ h1, h2, h3, h4, h5,
             background: #f8f9fa;
             color: #ced4da; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #3b4eda; }
+        color: #830f00f6; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -650,14 +650,14 @@ h1, h2, h3, h4, h5,
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #3b4eda; }
+        color: #830f00f6; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li .nav-link.active {
-        color: #3b4eda; }
+        color: #830f00f6; }
       .site-mobile-menu .site-nav-wrap li.active > a {
-        color: #3b4eda; }
+        color: #830f00f6; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -868,7 +868,7 @@ h1, h2, h3, h4, h5,
 
 .service-29191 .wrap-icon span {
   font-size: 4rem;
-  color: #3b4eda; }
+  color: #830f00f6; }
 
 .service-29191 h3 {
   font-size: 20px;
@@ -919,7 +919,7 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-weight: bold; }
   .site-logo-footer a {
-    color: #3b4eda; }
+    color: #830f00f6; }
 
 .social_29128 a {
   display: inline-block;
@@ -939,7 +939,7 @@ h1, h2, h3, h4, h5,
 .social_29128.white a {
   background: rgba(255, 255, 255, 0.2); }
   .social_29128.white a span {
-    color: #3b4eda; }
+    color: #830f00f6; }
   .social_29128.white a:hover {
     background: #fff; }
 
@@ -955,7 +955,7 @@ h1, h2, h3, h4, h5,
       .post-entry-1 .post-entry-1-contents h2 a {
         color: #000; }
         .post-entry-1 .post-entry-1-contents h2 a:hover {
-          color: #3b4eda; }
+          color: #830f00f6; }
   .post-entry-1.person-1 {
     text-align: center; }
     .post-entry-1.person-1 img {
