--- a/css/bootstrap-datepicker.css
+++ b/css/bootstrap-datepicker.css
@@ -286,16 +286,23 @@
 .datepicker table tr td.active:hover,
 .datepicker table tr td.active.disabled,
 .datepicker table tr td.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -ms-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#0044cc));
-  background-image: -webkit-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -o-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: linear-gradient(to bottom, #08c, #0044cc);
+  background-color: #811515;
+  background-image: -moz-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: -ms-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgb(204, 0, 0
+  )), to(#811515));
+  background-image: -webkit-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: -o-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08c', endColorstr='#0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgb(204, 0, 0
+  )', endColorstr='#811515', GradientType=0);
+  border-color: #811515 #811515 #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
@@ -321,7 +328,7 @@
 .datepicker table tr td.active:hover[disabled],
 .datepicker table tr td.active.disabled[disabled],
 .datepicker table tr td.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #811515;
 }
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
@@ -331,7 +338,7 @@
 .datepicker table tr td.active:hover.active,
 .datepicker table tr td.active.disabled.active,
 .datepicker table tr td.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #811515 \9;
 }
 .datepicker table tr td span {
   display: block;
@@ -359,17 +366,22 @@
 .datepicker table tr td span.active:hover,
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -ms-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#0044cc));
-  background-image: -webkit-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: -o-linear-gradient(to bottom, #08c, #0044cc);
-  background-image: linear-gradient(to bottom, #08c, #0044cc);
+  background-color: #cc0e00;
+  background-image: -moz-linear-gradient(to bottom, rgb(223, 17, 2), #811515);
+  background-image: -ms-linear-gradient(to bottom, rgb(204, 0, 0), #811515);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgb(204, 0, 0
+  )), to(#811515));
+  background-image: -webkit-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: -o-linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
+  background-image: linear-gradient(to bottom, rgb(204, 0, 0
+  ), #811515);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#08c', endColorstr='#0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='rgb(204, 0, 0
+  )', endColorstr='#811515', GradientType=0);
+  border-color: #811515 #811515 #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #ff000040;
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -394,7 +406,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #0044cc;
+  background-color: #811515;
 }
 .datepicker table tr td span.active:active,
 .datepicker table tr td span.active:hover:active,
@@ -404,7 +416,7 @@
 .datepicker table tr td span.active:hover.active,
 .datepicker table tr td span.active.disabled.active,
 .datepicker table tr td span.active.disabled:hover.active {
-  background-color: #003399 \9;
+  background-color: #811515 \9;
 }
 .datepicker table tr td span.old,
 .datepicker table tr td span.new {
