--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -5,168 +5,241 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
  */
+/* line 19, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
+/* line 25, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
+/* line 35, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
-  display: block; }
+  display: block;
+}
 
+/* line 46, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 body {
   margin: 0;
-  font-family: "Muli", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff;
+}
 
+/* line 62, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 [tabindex="-1"]:focus {
-  outline: 0 !important; }
+  outline: 0 !important;
+}
 
+/* line 72, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 hr {
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
-  overflow: visible; }
+  overflow: visible;
+}
 
+/* line 88, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+}
 
+/* line 97, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 p {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
+/* line 110, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
   text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
-  text-decoration-skip-ink: none; }
+  text-decoration-skip-ink: none;
+}
 
+/* line 119, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 address {
   margin-bottom: 1rem;
   font-style: normal;
-  line-height: inherit; }
+  line-height: inherit;
+}
 
+/* line 125, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 ol,
 ul,
 dl {
   margin-top: 0;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
+/* line 132, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 ol ol,
 ul ul,
 ol ul,
 ul ol {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
+/* line 139, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 dt {
-  font-weight: 700; }
+  font-weight: 700;
+}
 
+/* line 143, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 dd {
   margin-bottom: .5rem;
-  margin-left: 0; }
+  margin-left: 0;
+}
 
+/* line 148, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 blockquote {
-  margin: 0 0 1rem; }
+  margin: 0 0 1rem;
+}
 
+/* line 152, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 b,
 strong {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
+/* line 157, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
+/* line 166, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 sub,
 sup {
   position: relative;
   font-size: 75%;
   line-height: 0;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
+/* line 174, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 sub {
-  bottom: -.25em; }
+  bottom: -.25em;
+}
 
+/* line 175, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 sup {
-  top: -.5em; }
+  top: -.5em;
+}
 
+/* line 182, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 a {
   color: #3b4eda;
   text-decoration: none;
-  background-color: transparent; }
-  a:hover {
-    color: #2030a9;
-    text-decoration: underline; }
+  background-color: transparent;
+}
 
+/* line 13, ../../angelcamach0.github.io/scss/bootstrap/mixins/_hover.scss */
+a:hover {
+  color: #2030a9;
+  text-decoration: underline;
+}
+
+/* line 199, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 a:not([href]):not([tabindex]) {
   color: inherit;
-  text-decoration: none; }
-  a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
-    color: inherit;
-    text-decoration: none; }
-  a:not([href]):not([tabindex]):focus {
-    outline: 0; }
+  text-decoration: none;
+}
 
+/* line 17, ../../angelcamach0.github.io/scss/bootstrap/mixins/_hover.scss */
+a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* line 208, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
+a:not([href]):not([tabindex]):focus {
+  outline: 0;
+}
+
+/* line 218, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 pre,
 code,
 kbd,
 samp {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  font-size: 1em; }
+  font-size: 1em;
+}
 
+/* line 226, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
-  overflow: auto; }
+  overflow: auto;
+}
 
+/* line 240, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 figure {
-  margin: 0 0 1rem; }
+  margin: 0 0 1rem;
+}
 
+/* line 250, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 img {
   vertical-align: middle;
-  border-style: none; }
+  border-style: none;
+}
 
+/* line 255, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 svg {
   overflow: hidden;
-  vertical-align: middle; }
+  vertical-align: middle;
+}
 
+/* line 267, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 table {
-  border-collapse: collapse; }
+  border-collapse: collapse;
+}
 
+/* line 271, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #6c757d;
   text-align: left;
-  caption-side: bottom; }
+  caption-side: bottom;
+}
 
+/* line 279, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 th {
-  text-align: inherit; }
+  text-align: inherit;
+}
 
+/* line 290, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 label {
   display: inline-block;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+}
 
+/* line 299, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button {
-  border-radius: 0; }
+  border-radius: 0;
+}
 
+/* line 308, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button:focus {
   outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color; }
+  outline: 5px auto -webkit-focus-ring-color;
+}
 
+/* line 313, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 input,
 button,
 select,
@@ -175,60 +248,81 @@ textarea {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+}
 
+/* line 324, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button,
 input {
-  overflow: visible; }
+  overflow: visible;
+}
 
+/* line 329, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button,
 select {
-  text-transform: none; }
+  text-transform: none;
+}
 
+/* line 337, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 select {
-  word-wrap: normal; }
+  word-wrap: normal;
+}
 
+/* line 345, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; }
+  -webkit-appearance: button;
+}
 
+/* line 358, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button:not(:disabled),
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
 [type="submit"]:not(:disabled) {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
+/* line 365, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   padding: 0;
-  border-style: none; }
+  border-style: none;
+}
 
+/* line 373, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 input[type="radio"],
 input[type="checkbox"] {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 0; }
+  padding: 0;
+}
 
+/* line 380, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 input[type="date"],
 input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
-  -webkit-appearance: listbox; }
+  -webkit-appearance: listbox;
+}
 
+/* line 392, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 textarea {
   overflow: auto;
-  resize: vertical; }
+  resize: vertical;
+}
 
+/* line 398, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 fieldset {
   min-width: 0;
   padding: 0;
   margin: 0;
-  border: 0; }
+  border: 0;
+}
 
+/* line 413, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 legend {
   display: block;
   width: 100%;
@@ -238,35 +332,56 @@ legend {
   font-size: 1.5rem;
   line-height: inherit;
   color: inherit;
-  white-space: normal; }
+  white-space: normal;
+}
 
+/* line 425, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 progress {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
+/* line 430, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+  height: auto;
+}
 
+/* line 435, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 [type="search"] {
   outline-offset: -2px;
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
+/* line 448, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
+/* line 457, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 ::-webkit-file-upload-button {
   font: inherit;
-  -webkit-appearance: button; }
+  -webkit-appearance: button;
+}
 
+/* line 466, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 output {
-  display: inline-block; }
+  display: inline-block;
+}
 
+/* line 470, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 summary {
   display: list-item;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
+/* line 475, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 template {
-  display: none; }
+  display: none;
+}
 
+/* line 481, ../../angelcamach0.github.io/scss/bootstrap/_reboot.scss */
 [hidden] {
-  display: none !important; }
+  display: none !important;
+}
+
+/*# sourceMappingURL=bootstrap-reboot.css.map */
