--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -43,6 +43,7 @@
   &.img-bg-section {
     background-size: cover;
     background-repeat: no-repeat;
+    border-radius: 0%;
   }
   h1 {
     font-size: 4rem;
@@ -61,10 +62,10 @@
 
 .btn-video_38929 {
   display: inline-block;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: $white;
+  width: 100px;
+  height: 100px;
+  border-radius: 30%;
+  background: maroon;
   position: relative;
   > span {
     position: absolute;
