--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,8 +3,10 @@
 @import "bootstrap/mixins";
 
 /* Base */
+$primary: maroon;
 @import "site-base";
 /* Navbar */
 @import "site-navbar";
 /* Blocks */
 @import "site-blocks";
+$primary: maroon;
