--- a/css/style.css
+++ b/css/style.css
@@ -1323,7 +1323,7 @@ h1, h2, h3, h4, h5,
   width: 100px;
   height: 100px;
   border-radius: 30%;
-  background: red;
+  background: maroon;
   position: relative;
 }
 
