--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     font:12px arial;
     color: #222;
-    text-align:center;
+    text-align:left;
     padding:35px; }
   
 form, p, span {
