--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* CSS Document */
 body {
     font:12px arial;
+    border-color: rgb(2, 38, 58);
     color: #222;
     text-align:center;
     padding:35px; }
@@ -20,7 +21,7 @@ a {
 #wrapper, #loginform {
     margin:0 auto;
     padding-bottom:25px;
-    background:#EBF4FB;
+    background:rgba(36, 255, 189, 0.986);
     width:504px;
     border:1px solid #ACD8F0; }
   
@@ -33,15 +34,16 @@ a {
     margin:0 auto;
     margin-bottom:25px;
     padding:10px;
-    background:#fff;
+    background:rgb(128, 255, 202);
     height:270px;
     width:430px;
-    border:1px solid #ACD8F0;
+    border:1px solid rgb(2, 38, 58);
     overflow:auto; }
   
 #usermsg {
     width:395px;
-
+    background-color: rgb(0, 0, 29);
+    color: rgb(24, 83, 64);
     border:1px solid #ACD8F0; }
   
 #submit {
